--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -719,6 +719,8 @@ public class Main {
 - 类内部创建对象
 - 向外暴漏一个静态公共方法
 
+##### 饿汉式(静态常量写法)
+
 ```java
 // 静态常量写法
 public class HungrySingleton {
@@ -728,21 +730,6 @@ public class HungrySingleton {
     private final static HungrySingleton instance = new HungrySingleton();
     // 对外暴露一个公有静态方法
     public static HungrySingleton getInstance() {
-        return instance;
-    }
-}
-
-// 静态代码块写法
-class HungrySingleton2 {
-    // 禁止调用方使用构造方法创建类
-    private HungrySingleton2(){}
-    private static HungrySingleton2 instance;
-    // 在静态代码块中, 完成对象的创建
-    static {
-        instance = new HungrySingleton2();
-    }
-    // 对外暴露一个公有静态方法
-    public static HungrySingleton2 getInstance() {
         return instance;
     }
 }
@@ -760,27 +747,67 @@ class HungrySingleton2 {
 
 - 这种方式可以使用, 可能会造成内存浪费
 
+##### 饿汉式(静态代码块写法)
 
+```java
+// 静态代码块写法
+class HungrySingleton {
+    // 禁止调用方使用构造方法创建类
+    private HungrySingleton(){}
+    private static HungrySingleton instance;
+    // 在静态代码块中, 完成对象的创建
+    static {
+        instance = new HungrySingleton();
+    }
+    // 对外暴露一个公有静态方法
+    public static HungrySingleton getInstance() {
+        return instance;
+    }
+}
+```
 
+**优点 / 缺点 /结论**
 
-
-#### 懒汉式
-
-##### 懒汉式(线程不安全)
-
-##### 懒汉式(线程安全, 同步方法)
-
-##### 懒汉式(线程安全, 同步代码块)
+- 和饿汉式(静态常量写法)相同
 
 #### 懒汉式(不推荐)
 
 懒汉式的意思是, 懒表示懒加载, 是指在使用的时候才开始实例化
 
-因为加了synchronized同步锁, 所以是线程安全的, 但是因为每次加锁, 性能低, 不推荐使用
+##### 懒汉式(线程不安全写法)
 
 ```java
 public class LazySingleton {
     private static LazySingleton instance;
+    private LazySingleton(){}
+    public static LazySingleton getInstance(){
+        // 每次调用方法的时候, 判断对象是否被创建
+        if(instance == null){
+            instance = new LazySingleton();
+        }
+        return instance;
+    }
+}
+```
+
+**优点**
+
+- 起到了懒加载的作用, 但是只能在单线程下使用
+
+**缺点**
+
+- 在对线程下, 可能会重复创建对象, 起不到单例的作用
+
+**结论**
+
+- 不推荐使用
+
+##### 懒汉式(线程安全, 同步方法)
+
+```java
+public class LazySingleton {
+    private static LazySingleton instance;
+    // 因为加了synchronized同步锁, 所以是线程安全的
     public static synchronized LazySingleton getInstance() {
         if (instance != null){
             instance = new LazySingleton();
@@ -790,7 +817,41 @@ public class LazySingleton {
 }
 ```
 
-#### 双重校验锁(不推荐)
+**优点**
+
+- 解决了线程不安全的问题
+
+**缺点**
+
+- 每次加锁, 性能低, 不推荐使用
+
+**结论**
+
+- 不推荐使用
+
+##### 懒汉式(线程安全, 同步代码块)
+
+```java
+public class LazySingleton {
+    private static LazySingleton instance;
+    private LazySingleton(){}
+    public  static LazySingleton getInstance(){
+        if(instance == null){
+            // 使用同步代码块, 不能解决线程安全问题
+            synchronized (LazySingleton.class){
+                instance = new LazySingleton();
+            }
+        }
+        return instance;
+    }
+}
+```
+
+**优点 / 缺点 / 结论**
+
+- 和懒汉式(线程不安全写法)相同
+
+#### 双重校验锁(推荐)
 
 是对懒汉模式的优化, 第一次判断 INSTANCE == null为了避免非必要加锁，当第一次加载时才对实例进行加锁再实例化。
 这样既可以节约内存空间，又可以保证线程安全。
@@ -810,38 +871,62 @@ public class LazySingleton {
 
 ```java
 public class Lock2Singleton {
-    private volatile static Lock2Singleton singleton;
+    // volatile关键字, 让修改的值立即更新到主存
+    private volatile static Lock2Singleton instance;
+    private Lock2Singleton(){}
     public static Lock2Singleton getInstance(){
-        if (singleton == null){
+        // 两次if判断, 避免重复加锁, 也保证了线程安全
+        if (instance == null){
             synchronized (Lock2Singleton.class){
-                if (singleton == null){
-                    singleton = new Lock2Singleton();
+                if (instance == null){
+                    instance = new Lock2Singleton();
                 }
             }
         }
-        return singleton;
+        return instance;
     }
 }
 ```
+
+**优点**
+
+- 会延迟加载保证了性能, 又解决了线程同步的问题
+
+**结论**
+
+- 推荐使用
 
 #### 静态内部类(推荐)
 
 外部类被加载时, 内部类不会被加载, 所以要比饿汉式节省空间
 
-在调用getInstance时, 内部类被加载, 初始化外部类静态实例, 由于是静态对象, 所以要比懒汉式线程安全
+在调用getInstance时, 内部类被加载, 并且只会被加载一次, 保证了线程安全
 
 ```java
 public class Singleton{
+	private Singleton(){}
+    // 静态内部类, 在内部类中创建外部类的对象
 	private static class SingletonHolder{
         private static final Singleton INSTANCE = new Singleton();
     }
+    // 返回内部类中创建的对象
     public static final Singleton getInstance(){
         return SingletonHolder.INSTANCE;
     }
 }
 ```
 
-#### 枚举
+#### 枚举(推荐)
+
+可以避免多线程同步的问题, 还可以避免反序列化重新创建对象
+
+```java
+enum Singleton{
+    INSTANCE;   // INSTANCE是定义的一个常量,  使用Singleton.INSTANCE, 会返回Singleton的单例对象, 该对象, 可以调用枚举内的方法
+}
+```
+
+
 
 ### 建造者模式
 
@@ -969,7 +1054,7 @@ public class Main {
 
 #### 浅拷贝
 
-不拷贝引用类型
+不拷贝引用类型, 在spring中创建一个bean可配置为prototype(原型模式) 或者singleton(单例模式)
 
 ```java
 public class Computer implements Cloneable {
@@ -1000,6 +1085,8 @@ public class Computer implements Cloneable {
 #### 深拷贝
 
 拷贝引用类型
+
+##### 方式一
 
 ```java
 public class ComputerDetail implements Cloneable {
@@ -1068,6 +1155,70 @@ class Disk implements Cloneable {
     }
 }
 ```
+
+##### 方式二
+
+反序列化的方式
+
+```java
+public class ComputerDetail implements Serializable {
+	// 序列化
+    private static final long serialVersionUID = -7641731191620910423L;
+
+    private String cpu;
+    private String memory;
+    private Disk disk;
+
+    public ComputerDetail(String cpu, String memory, Disk disk) {
+        this.cpu = cpu;
+        this.memory = memory;
+        this.disk = disk;
+    }
+
+     public ComputerDetail deepClone(){
+         ByteArrayOutputStream bos = null;
+         ObjectOutputStream oos = null;
+         ByteArrayInputStream bas = null;
+         ObjectInputStream ois = null;
+         try {
+             // 序列化
+             bos = new ByteArrayOutputStream();
+             oos = new ObjectOutputStream(bos);
+             oos.writeObject(this);
+             // 反序列化
+             bas = new ByteArrayInputStream(bos.toByteArray());
+             ois = new ObjectInputStream(bas);
+             ComputerDetail o = (ComputerDetail)ois.readObject();
+             return o;
+         }catch (Exception e){
+             e.printStackTrace();
+             return null;
+         }finally {
+             try {
+                 bos.close();
+                 oos.close();
+                 bas.close();
+                 ois.close();
+             }catch (Exception e){
+                 e.printStackTrace();
+             }
+         }
+     }
+}
+class Disk implements Serializable {
+    // 序列化
+    private static final long serialVersionUID = 468301263887618389L;
+    private String ssd;
+    private String hhd;
+
+    public Disk(String ssd, String hhd){
+        this.ssd = ssd;
+        this.hhd = hhd;
+    }
+}
+```
+
+
 
 ## 结构型模式
 
