--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -930,6 +930,27 @@ enum Singleton{
 
 ### 建造者模式
 
+将要创建的对象和创建过程进行解耦,
+
+将复杂对象的创建过程抽象出来, 使这个抽象过程的不同实现方法可以构造出不同的对象, 
+
+允许用户只通过指定复杂对象的类型和内容就可以创建, 用户不需要知道内部的具体构建细节
+
+#### 角色
+
+- **产品:**   要被创建的对象
+- **抽象建造者:**    抽象出创建产品的方法
+- **建造者:**   实现抽象构建者, 创建不同的对象, 有多个构建者
+- **指挥者:**   接受不同的参数去调用不同构建者的方法, 去创建对象, 并对外提供接口
+
+#### 自己的解释
+
+不一定对
+
+首先, 要创建一个电脑对象, 需要先创建cpu, 内存, 主板. 如果不将创建的过程封装, 那么每次使用的时候, 都需要自己创建cpu等对象, 造成了强耦合. 
+
+如果创建电脑对象的过程发生了变化, 修改就会很麻烦. 所以就需要使用建造者模式, 将创建的过程封装成一个方法, 只要修改这个方法就可以, 调用方不需要修改代码
+
 **实体类**
 
 ```java
@@ -988,6 +1009,7 @@ public interface ComputerBuilder {
 **实现类**
 
 ```java
+// 普通电脑的建造者
 public class ComputerConcreteBuilder implements ComputerBuilder {
 
     private Computer computer;
@@ -1019,6 +1041,10 @@ public class ComputerConcreteBuilder implements ComputerBuilder {
         return computer;
     }
 }
+// 高配电脑的建造者
+public class HighComputerConcreteBuilder implements ComputerBuilder {
+    // 省略
+}
 ```
 
 **构建使用builder接口得对象**
@@ -1043,9 +1069,14 @@ public class Main {
         ComputerDirector computerDirector = new ComputerDirector();
         // 创建建造者对象
         ComputerBuilder computerBuilder = new ComputerConcreteBuilder();
+        // 创建高配电脑创建者对象
+        ComputerBuilder highComputerConcreteBuilder = new HighComputerConcreteBuilder();
         // 建造产品
         Computer computer = computerDirector.constructComputer(computerBuilder);
         System.out.println(computer.toString());
+        // 建造高级电脑产品
+        Computer computer2 = computerDirector.constructComputer(highComputerConcreteBuilder);
+        System.out.println(computer2.toString());
     }
 }
 ```
