--- a/前端/鸿蒙/鸿蒙.md
+++ b/前端/鸿蒙/鸿蒙.md
@@ -103,3 +103,43 @@ AA支持service模板和Data模板
         ohos:above="$id:text2"></Text>  
 ```
 
+# 日志
+
+## 定义日志标签
+
+使用HiLogLabel(int type, int domain, String tag)定义日志标签，其中包括了日志类型、业务领域和TAG。使用示例：
+
+```
+static final HiLogLabel LABEL = new HiLogLabel(HiLog.LOG_APP, 0x00201, "MY_TAG"); 
+```
+
+- 参数type：用于指定输出日志的类型。
+- 参数domain：用于指定输出日志所对应的业务领域，取值范围为0x0~0xFFFFF.
+- 参数tag：用于指定日志标识，可以为任意字符串，建议标识调用所在的类或者业务行为。可定义为当前输出的日志的类名
+
+## 输出日志
+
+HiLog中定义了DEBUG、INFO、WARN、ERROR、FATAL五种日志级别，并提供了对应的方法用于输出不同级别的日志，如下表所示。
+
+| 接口名                                                 | 功能描述                                                     |
+| ------------------------------------------------------ | ------------------------------------------------------------ |
+| debug(HiLogLabel label, String format, Object... args) | 输出DEBUG级别的日志。DEBUG级别日志表示仅用于应用调试，默认不输出，输出前需要在设备的“开发人员选项”中打开“USB调试”开关。 |
+| info(HiLogLabel label, String format, Object... args)  | 输出INFO级别的日志。INFO级别日志表示普通的信息。             |
+| warn(HiLogLabel label, String format, Object... args)  | 输出WARN级别的日志。WARN级别日志表示存在警告。               |
+| error(HiLogLabel label, String format, Object... args) | 输出ERROR级别的日志。ERROR级别日志表示存在错误。             |
+| fatal(HiLogLabel label, String format, Object... args) | 输出FATAL级别的日志。FATAL级别日志表示出现致命错误、不可恢复错误。 |
+
+- 参数label：定义好的HiLogLabel标签。
+
+- 参数format：格式字符串，用于日志的格式化输出。格式字符串中可以设置多个参数，例如格式字符串为“Failed to visit %s.”，“%s”为参数类型为string的变参标识，具体取值在args中定义。
+
+  每个参数需添加隐私标识，分为{public}或{private}，默认为{private}。{public}表示日志打印结果可见；{private}表示日志打印结果不可见，输出结果为<private>。
+
+- 参数args：可以为0个或多个参数，是格式字符串中参数类型对应的参数列表。参数的数量、类型必须与格式字符串中的标识一一对应。
+
+以输出一条WARN级别的信息为例，示例代码：
+
+```java
+// private表示只在开发时能看到, 默认为私有
+HiLog.warn(LABEL, "Failed to visit %{private}s, reason:%{public}d.", url, errno);
+```
