--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -1259,12 +1259,15 @@ class Disk implements Serializable {
 
 在需要不改变（或者由于项目原因无法改变）原有接口或类结构的情况下扩展类的功能以适配不同的接口时，可以使用类的适配器模式。适配器模式通过创建一个继承原有类（需要扩展的类）并实现新接口的适配器类来实现
 
+类适配器会暴露出原有类的方法, 不推荐
+
 ##### 原有类
 
 ```java
 public class Source {
-    public void eidtTextFile(){
-        System.out.println("文本编辑");
+    public void output220V(){
+        System.out.println("输入220V电压");
+        return 220;
     }
 }
 ```
@@ -1274,9 +1277,7 @@ public class Source {
 ```java
 public interface Targetable {
     // 原有的接口
-    void editTextFile();
-    // 扩展的接口
-    void editWordFile();
+    void output5V();
 }
 ```
 
@@ -1285,12 +1286,9 @@ public interface Targetable {
 ```java
 public class Adapter extends Source implements Targetable {
     @Override
-    public void editTextFile() {
-        System.out.println("文本编辑");
-    }
-    @Override
-    public void editWordFile() {
-        System.out.println("单词编辑");
+    public void output5V() {
+        // 降低电压
+        System.out.println("输出" + output220V / 44 + "电压");
     }
 }
 ```
@@ -1301,8 +1299,7 @@ public class Adapter extends Source implements Targetable {
 public class Main {
     public static void main(String[] args) {
         Targetable targetable = new Adapter();
-        targetable.editTextFile();
-        targetable.editWordFile();
+        targetable.output5V
     }
 }
 ```
