--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -96,6 +96,22 @@ String c = a + b
 
   虚引用通过PhantomReference类实现，虚引用和引用队列联合使用，主要用于跟踪对象的垃圾回收状态。
 
+## 类在实例化内部执行顺序
+
+1. 加载父类的给静态变量赋值的方法, 静态代码块,  先后的顺序由代码的上下位置决定, 
+
+   再加载子类的给静态变量赋值的方法, 静态代码块
+
+   **静态代码块, 给静态变量赋值的方法, 在类加载时就会触发**
+
+2. 调用父类给非静态变量赋值的方法**(如果该方法被子类重写, 则会调用子类的方法, 因为this指向当前正在创建的对象, 也就是子类的对象)**, 非静态代码块, 先后的顺序由代码的上下位置决定, 
+
+   接着再调用父类的构造方法
+
+3. 调用子类给非静态变量赋值的方法, 非静态代码块,先后的顺序由代码的上下位置决定, 
+
+   最后调用子类的构造方法
+
 ## 集合
 
 ### List
