--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -1288,7 +1288,7 @@ public class Adapter extends Source implements Targetable {
     @Override
     public void output5V() {
         // 降低电压
-        System.out.println("输出" + output220V / 44 + "电压");
+        System.out.println("输出" + output220V() / 44 + "电压");
     }
 }
 ```
@@ -1319,15 +1319,9 @@ public class ObjectAdapter implements Targetable {
         this.source = source;
     }
 	
-    // 原始的方法中,  使用原始类的对象调用
-    @Override
-    public void editTextFile() {
-        this.source.eidtTextFile();
-    }
-
-    @Override
-    public void editWordFile() {
-        System.out.println("单词编辑");
+    public void output5V() {
+        // 降低电压
+        System.out.println("输出" + source.output220V() / 44 + "电压");
     }
 }
 ```
@@ -1617,6 +1611,8 @@ public class Main {
 
 通过定义公共接口, 实现传入不同的实现类对象, 不改变代码逻辑的情况下完成不同的功能.
 
+jdbc就是使用桥接模式
+
 **公共接口**
 
 ```java
@@ -1626,6 +1622,8 @@ public interface Driver {
 ```
 
 **实现类**
+
+可以有多个实现类
 
 ```java
 public class MysqlDriver implements Driver {
@@ -1653,6 +1651,7 @@ public class OracleDriver implements Driver {
 public abstract class DriverManagerBridge {
 
     private Driver driver;
+    // 在抽象类中, 调用接口的方法
     public void execute(){
         this.driver.executeSQL();
     }
@@ -1668,10 +1667,19 @@ public abstract class DriverManagerBridge {
 **抽象类的实现类**
 
 ```java
+// 抽象类可以有多个子类
 public class MyDriverBridge extends DriverManagerBridge {
     // 可以不重写, 直接调用抽象类的方法
 	@Override
     public void execute() {
+        System.out.println("111");
+        getDriver().executeSQL();
+    }
+}
+public class MyDriverBridge2 extends DriverManagerBridge {
+	@Override
+    public void execute() {
+        System.out.println("222");
         getDriver().executeSQL();
     }
 }
