--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -1398,22 +1398,49 @@ public class Main {
 
 与适配器模式的区别是,  适配器模式是扩展一个类的方法, 而装饰者模式是包装改造被装饰的方法
 
-**接口**
+**抽象类**
 
 ```java
-public interface Sourceable {
-    void createComputer();
+public abstract class Drink {
+    // 藐视
+    public String des;
+    // 价格
+    private float price = 0.0f;
+
+    public String getDes() {
+        return des;
+    }
+
+    public void setDes(String des) {
+        this.des = des;
+    }
+
+    public float getPrice() {
+        return price;
+    }
+
+    public void setPrice(float price) {
+        this.price = price;
+    }
+	// 抽象方法, 计算价格, 由子类实现
+    public abstract float cost();
 }
 ```
 
 **实现类**
 
 ```java
-public class Source implements Sourceable {
-
+public class Coffee extends Drink{
     @Override
-    public void createComputer() {
-        System.out.println("创建一个电脑");
+    public float cost() {
+        // 返回咖啡价格
+        return getPrice();
+    }
+}
+public class Espresso extends Coffee{
+    public Espresso() {
+        setDes("意大利咖啡");
+        setPrice(5.0f);
     }
 }
 ```
@@ -1423,18 +1450,30 @@ public class Source implements Sourceable {
 装饰器与被装饰得对象实现相同得接口, 装饰器得构造函数, 传入被装饰得对象, 装饰器实现得方法中, 通过传入得对象调用被装饰的类的方法. 
 
 ```java
-public class Decorator implements Sourceable{
-
-    private Sourceable sourceable;
-
-    public Decorator(Sourceable sourceable){
-        this.sourceable = sourceable;
+public class Decorator extends Drink{
+    private Drink drink;
+    public Decorator(Drink drink) {
+        this.drink = drink;
     }
 
     @Override
-    public void createComputer() {
-        sourceable.createComputer();
-        System.out.println("装系统");
+    public float cost() {
+        // 计算添加的配料价格 + 饮品的价格
+        return getPrice() + drink.cost();
+    }
+
+    @Override
+    public String getDes() {
+        // 拼接描述
+        return super.getDes() + "-"  + drink.getDes();
+    }
+}
+// 装饰器
+public class Chocolate extends Decorator{
+    public Chocolate(Drink drink) {
+        super(drink);
+        setDes("巧克力");
+        setPrice(1.0f);
     }
 }
 ```
@@ -1442,11 +1481,19 @@ public class Decorator implements Sourceable{
 **主类**
 
 ```java
-public class Main {
+public class Bar {
     public static void main(String[] args) {
-        Sourceable sourceable = new Source();
-        Sourceable obj = new Decorator(sourceable);
-        obj.createComputer();
+        // 创建一杯意大利咖啡
+        Drink drink = new Espresso();
+        System.out.println(drink.cost());
+        // 咖啡+巧克力
+        drink = new Chocolate(drink);
+        System.out.println(drink.cost());
+        System.out.println(drink.getDes());
+        // 咖啡+巧克力+巧克力
+        drink = new Chocolate(drink);
+        System.out.println(drink.cost());
+        System.out.println(drink.getDes());
     }
 }
 ```
