--- a/后端/项目管理工具.md
+++ b/后端/项目管理工具.md
@@ -398,3 +398,68 @@ under the License.
 </settings>
 ```
 
+## 热部署配置
+
+### spring boot项目
+
+#### 要使用的子项目
+
+```xml
+<!-- 配置插件 -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-devtools</artifactId>
+    <scope>runtime</scope>
+    <optional>true</optional>
+</dependency>
+```
+
+#### 父项目
+
+```xml
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+                <fork>true</fork>
+                <addResources>true</addResources>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+```
+
+#### idea设置
+
+- settings -> Build, Execution, Deployment > Compiler
+
+  勾选
+
+  - Automatically show first error in editor (在编译器中自动显示错误)
+  - Display notification on build completion (在构建完成时显示通知)
+  - Build project automatically (自动构建项目)
+  - Compile independent modules in parallel (并行独立编译模块)
+
+#### idea开启热部署
+
+```bash
+# 命令
+ctrl + shift + alt + /
+```
+
+- registry(注册表)
+
+  勾选 
+
+  - compiler.automake.allow.when.app.running
+  - actionSystem.assertFocusAccessFromEdit
+
+- 顶部菜单- >Edit Configurations(编辑配置 )->SpringBoot
+
+  - on 'Update' action:  选择 Update classes and resources
+  - on frame deactivation:  选择 Update classes and resources
+
+- 重启idea
+
