--- a/后端/注册中心.md
+++ b/后端/注册中心.md
@@ -1,4 +1,6 @@
-# 客户端
+# Zookeeper
+
+## 客户端
 
 ## 命令
 
@@ -14,3 +16,17 @@ ls /services/[微服务名]
 get /services/[微服务名]/[实例id]
 ```
 
+# Consul
+
+## 监控页面访问地址
+
+- http://localhost:8500/
+
+## 命令
+
+```bash
+# 查看版本
+consul version
+# 开发模式启动
+consul agent -dev
+```
