--- a/前端/样例.md
+++ b/前端/样例.md
@@ -25,7 +25,7 @@ function MouseWheel(event) {
 
 # 日期格式化
 
-### 方法一
+## 方法一
 
 有兼容问题, 安卓6及已下版本不兼容
 
@@ -54,7 +54,7 @@ function dateFormat(fmt, date) {
 let s = dateFormat("yyyy-MM-dd", new date());
 ```
 
-### 方法二
+## 方法二
 
 ```js
 Date.prototype.format = function (fmt) {
@@ -75,20 +75,6 @@ Date.prototype.format = function (fmt) {
 
 // 使用
 new date().format("yyyy-MM-dd");
-```
-
-
-
-# 调试
-
-移动端调试, 插件, 放在页面后, 可以模拟浏览器控制台, 查看报错
-
-```html
-<script src="http://wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.2.0"></script>
-<script>
-	// init vConsole
-	var vConsole = new VConsole()
-</script>
 ```
 
 # 防抖动函数
