--- a/前端/第三方插件/工具.md
+++ b/前端/第三方插件/工具.md
@@ -15,3 +15,16 @@ import {nanoid} from 'nanoid'
 let uuid = nanoid()
 ```
 
+# 移动端调试插件
+
+移动端调试, 插件, 放在页面后, 可以模拟浏览器控制台, 查看报错
+
+```html
+<script src="http://wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.2.0"></script>
+<script>
+	// init vConsole
+	var vConsole = new VConsole()
+</script>
+```
+
+# 
