--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -519,19 +519,19 @@ java中要操作对象, 必须要先获取该对象的引用, 可通过引用计
 
 ## 垃圾回收算法
 
-### 标记清除算法
+### 标记清除算法(老年代)
 
 基础算法, 分为标记和清除两个阶段, 在标记阶段, 标记所需要回收的对象, 在清除阶段, 清除标记的对象并释放内存
 
 **注**:   由于标记清除算法,在清理内存后, 没有对内存重新进行整理, 因此如果内存中的小对象居多, 会引起内存碎片化问题, 继而引起大对象无法获得连续可用的空间
 
-### 复制算法
+### 复制算法(年轻代)
 
 复制算法是为了解决标记清除算法内存碎片化问题而设计的, 将内存划分两块相等的区域, 区域1, 存放新生成的对象, 在区域1存满后, 对区域1中的对象进行标记, 标记存活下来的对象, 复制到区域2中, 为连续的内存, 再对区域1中的对象进行清理.
 
 **注:**  复制法高效, 并易于实现,但浪费内存, 同时, 系统中有大量长时间存活的对象时, 这些对象将在内存区域1和2之间来回复制影响系统效率
 
-### 标记整理算法
+### 标记整理算法(老年代)
 
 结合了标记清除算法和复制算法的优点, 在标记阶段, 和标记清除算法相同, 在标记完成后, 将标记存活的对象移到内存另一端,将存活的放在同一区域, 未存活的放在同一区域, 清除未存活的对象
 
