--- a/后端/工具.md
+++ b/后端/工具.md
@@ -1,5 +1,7 @@
 # ID生成器
 
+## 源码
+
 推特公司的雪花算法
 
 ```java
@@ -91,6 +93,7 @@ public class IDWorker {
     }
 
     public static void main(String[] args) {
+        // 传入的是数据中心id和, 机器id
         IDWorker idWorker = new IDWorker(2, 3);
         for (int i = 0; i < 10; i++) {
             System.out.println(idWorker.nextId());
@@ -99,6 +102,58 @@ public class IDWorker {
 
 }
 ```
+
+## 整合SpringBoot
+
+### 依赖
+
+```xml
+<!-- 使用糊涂工具包, 工具包内含雪花算法工具类 -->
+<dependeny>
+	<groupId>cn.hutool</groupId>
+    <artifactId>hutool-all</artifactId>
+    <version>5.0.1</version>
+</dependeny>
+```
+
+### 使用
+
+```java
+@Component
+@Sli4j
+public class IdGeneratorSnowflake{
+    // 机房号
+    private long workerId = 0;
+    // 机器号
+    private long datacenterId = 1;
+    private SnowFlake snowflake = IdUtil.createSnowflake(workerId, datacenterId);
+    
+    @PostConstruct
+    public void init(){
+        try{
+            // 得到当前机器workerId
+        	workerId = NetUtil.ipv4ToLong(NetUtil.getLocalhostStr());
+        }catch (Exception e){
+            e.printStackTrace();
+            log.warn("当前机器workerId获取失败", e);
+            workerId = NetUtil.getLocalhostStr().hashCode();
+        }
+    }
+    
+    public synchronized long snowflakeId(){
+        return snowflake.nextId();
+    }
+    
+    public synchronized long snowflakeId(long workerId, long datacenterId){
+        SnowFlake snowflake = IdUtil.createSnowflake(workerId, datacenterId);
+        return snowflake.nextId();
+    }
+}
+```
+
+
+
+
 
 # Lombok
 
