--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -906,3 +906,94 @@ git branch -D <分支名>
 - 主开发分支, 创建一个测试分支
 - 测试分支的代码通过后, 合并到master分支, 和主开发分支, 保持master和主开发分支代码一致
 - 如果master分支发现bug, 在master分支上创建一个临时分支, 解决完bug后, 合并到master分支上和主开发分支上
+
+# 分布式系统
+
+## 为什么需要分布式全局唯一ID以及分布式ID的业务需求
+
+如果搭建了集群环境并且分库分表, 很容易出现相同的ID
+
+需要专门的ID服务器, 生成全局分布式唯一ID, 该服务器需要满足
+
+- **高可用**
+
+  发一个分布式ID的请求, 服务器就要保证99.999%的情况下给我创建一个唯一分布式ID
+
+- **低延迟**
+
+  发一个获取分布式ID的请求, 服务器要快速响应
+
+- **高QPS**
+
+  要满足短时间大量(10万+)的请求
+
+### UUID
+
+UUID是无序的, 无法预测生成顺序, 入库性能较差, 创建的也会消耗更多时间, 减少插入性能, 并且32位较长
+
+### 自增主键
+
+#### 单机
+
+单机模式可以使用
+
+```sql
+# 是同replace into 语句, 用法和insert into 相同,
+# 不同点是, 检测到唯一索引那列冲突, 会删除当前数据, 再插入新数据, 自增主键会正常增加
+replace into 
+```
+
+#### 集群
+
+不太适合, 不容易扩展, 分库分表会出现自增要设置不同的步长的问题, 数据库压力过大
+
+### 基于Redis生成全局id策略
+
+Redis自带的**INCR**和**INCRBY**都是原子性操作, 并且性能高, 比关系型数据库更适合做全局唯一主键生成,
+
+但是如果部署Redis集群, 还是很难解决, 每个Redis的自增设置不同的步长问题
+
+### 雪花算法(推荐)
+
+- 生成的id的结果是一个64bit大小的整数, 为一个Long型(转换成字符串, 最大不会超过19位)
+- 分布式系统不会产生ID碰撞, 并且效率较高
+- 毫秒数在高位, 整体是趋势递增的, 随着时间戳增大
+- 不依赖第三方数据库系统
+- 可以根据自身的特性分配他的工作进程位
+
+#### 号段解释
+
+雪花算法生成的id,转换成2进制为, 64为
+
+- **第一位**   符号位, 基本永远是0, 0为正数, ID一般不会存在负数
+- **2-42位**   时间戳, 能使用69.73年, 一直到2039年
+- **43-52位**   工作进程位, 表示工作的机器ID, 最多1024台,  workerId和datacenterId
+- **53-64位**   序列号, 用来记录毫秒内产生的不同ID
+
+#### 缺点
+
+- 依赖时钟, 如果服务器的时间往回调整, 可能会出现生成重复ID的情况
+- 在单机上是呈现递增的, 但是在分布式环境上, 不同服务器的时间可能不同, 有时候不会出现全局递增的情况
+
+#### 雪花算法优化
+
+- UidGenerator(百度)
+- Leaf(美团)
+
+## ID生成规则部分硬性要求
+
+- **全局唯一**
+
+- **趋势递增**
+
+  MySQL的innoDB引擎使用的是聚集索引, 由于多数RDBMS使用的Btree的数据结果来存储索引数据, 在主键的选择上, 我们尽可能选择有序的主键, 保证性能
+
+- **单调递增**
+
+  保证下一个ID一定大于上一个ID, 例如事务的版本号, IM增量信息, 排序等特殊需求
+
+- **信息安全**
+
+  如果ID是连续的容易被人恶意爬取, 所以尽量使用无规则的ID
+
+- **含时间戳**
